@@ -19,6 +19,27 @@
   <url type="bugtracker">https://github.com/mike-fabian/ibus-typing-booster/issues</url>
   <url type="help">https://mike-fabian.github.io/ibus-typing-booster/documentation.html</url>
   <releases>
+    <release version="2.6.2" date="2019-06-05" urgency="medium">
+      <description>
+        <ul>
+          <li>
+            Emoji ZWJSequence “people holding hands” is 12.0, not 10.0
+          </li>
+          <li>
+            Update emoji annotations from CLDR
+          </li>
+          <li>
+            icons: Regenerate with proper transparency (Thanks to FeRD (Frank Dana))
+          </li>
+          <li>
+            Remove enable-background from icon SVG (Thanks to FeRD (Frank Dana))
+          </li>
+          <li>
+            Update UnicodeData.txt to current Unicode 12.1.0
+          </li>
+        </ul>
+      </description>
+    </release>
     <release version="2.6.1" date="2019-05-06" urgency="medium">
       <description>
         <ul>
